<resources>
    <string name="app_name">花漾</string>
    <string name="help">帮助</string>
    <string name="phone_and_password_login">手机号密码登陆</string>
    <string name="back">返回</string>
    <string name="input_phone_hint">请输入账号</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="login">登陆</string>
    <string name="menu">菜单</string>
    <string name="login_by_phone_password">手机号密码登陆</string>
    <string name="login_success">登陆成功</string>
    <string name="login_failed">登陆失败</string>
    <string name="search_something">搜索些什么吧</string>
    <string name="todo">TODO</string>
    <string name="home_bottom_text_1">首页</string>
    <string name="home_bottom_message">消息</string>
    <string name="home_bottom_mine">我的</string>
    <string name="contacts">联系人</string>
    <string name="me">我</string>
    <string name="exit_login">退出登录</string>
    <string name="find_service">客服服务</string>
    <string name="service_on_line">客服上线</string>
    <string name="service_off_line">客服下线</string>
    <string name="group_message">群发消息</string>
    <string name="sure">确定</string>
    <string name="choose_group">选择群</string>
    <string name="group_send_message">群发消息</string>
    <string name="choose_group_tips">您选择的群如下所示</string>
    <string name="send">发送</string>
    <string name="touch_recording">按住录音</string>
    <string name="released_cancel">松开取消</string>
    <string name="up_slide_cancel">上滑取消</string>
    <string name="record_error">录音出现错误，请稍后重试</string>
    <string name="home">首页</string>
    <string name="hy_service">花漾客服群</string>
    <string name="sending">发送中</string>
    <string name="send_success">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="not_send_null_text">不可以发送空消息哦</string>
    <string name="load_failed">加载错误，请稍后重试</string>
    <string name="hy_service_person">花漾客服</string>
    <string name="update_line_failed">%s线失败</string>
    <string name="update_line_success">%s线成功</string>
    <string name="service_status">客服%s线</string>
    <string name="up">上</string>
    <string name="down">下</string>
    <string name="liveing">正在直播</string>
    <string name="loading_service_person">正在分配客服人员，请稍后发送</string>
    <string name="update_my_hi_message">修改我的招呼语</string>
    <string name="current_message">当前招呼语</string>
    <string name="update_success">修改成功</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="save_qr_code_local">保存到相册</string>
    <string name="save_success">保存成功</string>
    <string name="save_failed">保存失败</string>
    <string name="update_mine_data">修改我的信息</string>
    <string name="mine_header">头像</string>
    <string name="mine_nickname">昵称</string>
    <string name="mine_hy_num">花漾号</string>
    <string name="mine_sex">性别</string>
    <string name="mine_address">地区</string>
    <string name="mine_sign">个性签名</string>
    <string name="select_address">选择您的地区</string>
    <string name="please_choose">请选择</string>
    <string name="sign">个性签名</string>
    <string name="cancel">取消</string>
    <string name="please_input_connect">请输入%s</string>
    <string name="input_limit_hint">%1$s的长度是%2$s位以内哦</string>
    <string name="hy_num_tips">花漾号仅可修改一次</string>
    <string name="choose_sex">选择您的性别</string>
    <string name="men">男</string>
    <string name="nil">未知</string>
    <string name="women">女</string>
    <string name="complete_data">补全信息</string>
    <string name="write_something">写点什么吧</string>
    <string name="write_finish">写完了吗？</string>
    <string name="subscribe">关注</string>
    <string name="already_subscribe">已关注</string>
    <string name="say_something">说些什么吧</string>
    <string name="album">相册</string>
    <string name="shot">拍照</string>
    <string name="video">视频</string>
    <string name="please_complete_data">请先补全信息</string>
    <string name="current_time_not_service">当前时间暂无客服在线</string>
    <string name="delete">删除</string>
    <string name="sum_subscribe">%1$s个关注</string>
    <string name="current_time_not_live">当前时间暂无直播</string>
    <string name="session">消息</string>
    <string name="already_off_line">您已被挤下线，请稍后尝试重新登陆</string>
    <string name="live_exit">主播已经下播咯</string>
    <string name="has_person_send_gift_name">%1$s送出%2$s个%3$s</string>
    <string name="i_have_num_money">剩余金币:%s</string>
    <string name="select_num">选择数量:</string>

</resources>
