<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="data"
            type="com.yb.livechatkt.vm.MineViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/normal_bg_color"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.yb.livechatkt.view.LiveTitleBar
                android:id="@+id/live_title_bar"
                android:layout_width="match_parent"
                app:leftType="0"
                app:centerType="1"
                app:centerTitle="@string/me"
                app:rightType="0"
                app:textColor="@color/white"
                android:layout_height="@dimen/limit_size_50dp"
                android:background="@color/theme_bg_color"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />


            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/limit_size_50dp"
                android:background="@color/white"
                android:layout_marginBottom="@dimen/limit_size_20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/live_title_bar"
                app:layout_constraintVertical_bias="0"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/header"
                    android:layout_width="@dimen/limit_size_50dp"
                    android:layout_height="@dimen/limit_size_50dp"
                    android:layout_marginStart="@dimen/limit_size_40dp"
                    android:layout_marginTop="@dimen/limit_size_80dp"
                    android:src="@drawable/ic_normal_header" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/limit_size_20dp"
                    android:layout_marginTop="@dimen/limit_size_90dp"
                    android:layout_toRightOf="@id/header" />

                <ImageView
                    android:id="@+id/qr_code"
                    android:layout_width="@dimen/limit_size_30dp"
                    android:layout_height="@dimen/limit_size_30dp"
                    android:src="@drawable/ic_qr_code_hint"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/limit_size_80dp"
                    android:layout_marginEnd="@dimen/limit_size_40dp" />
            </RelativeLayout>




            <com.yb.livechatkt.view.LiveIconTitleActionBar
                android:id="@+id/find_service"
                android:layout_width="match_parent"
                android:layout_height="@dimen/limit_size_40dp"
                app:layout_constraintVertical_bias="0.2"
                app:icon="@drawable/ic_service_hi_hy_color"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                app:title="@string/find_service"
                android:visibility="@{data.isShowService ? View.VISIBLE : View.GONE}"
                tools:ignore="MissingConstraints" />

            <com.yb.livechatkt.view.LiveIconTitleActionBar
                android:id="@+id/update_hi_msg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/limit_size_40dp"
                app:layout_constraintVertical_bias="0"
                app:icon="@drawable/ic_service_hi_hy_color"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/find_service"
                app:title="@string/update_my_hi_message"
                android:visibility="@{data.isShowService ? View.GONE : View.VISIBLE}"
                tools:ignore="MissingConstraints" />


            <com.yb.livechatkt.view.LiveIconTitleActionBar
                android:id="@+id/group_message"
                android:layout_width="match_parent"
                android:layout_height="@dimen/limit_size_40dp"
                app:icon="@drawable/ic_group_message_black"
                android:background="@color/white"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/update_hi_msg"
                app:title="@string/group_message"
                tools:ignore="MissingConstraints" />

            <com.yb.livechatkt.view.LiveIconTitleActionBar
                android:id="@+id/service"
                android:layout_width="match_parent"
                android:layout_height="@dimen/limit_size_40dp"
                android:background="@color/white"
                app:icon="@drawable/ic_service_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group_message"
                app:layout_constraintVertical_bias="0.0"
                app:title="@string/service_off_line"
                android:visibility="@{data.isShowService ? View.GONE : View.VISIBLE}"
                tools:ignore="MissingConstraints" />

            <com.yb.livechatkt.view.LiveIconTitleActionBar
                android:id="@+id/exit_login"
                android:layout_width="match_parent"
                app:icon="@drawable/ic_exit_login_black"
                app:title="@string/exit_login"
                android:clickable="true"
                android:onClick="@{()->data.exitLogin()}"
                android:background="@color/white"
                android:layout_height="@dimen/limit_size_40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/service"
                tools:ignore="MissingConstraints" />




        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>