<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="data"
            type="com.yb.livechatkt.vm.ServiceUpdateMsgViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.yb.livechatkt.view.LiveTitleBar
            android:id="@+id/liveTitleBar2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/limit_size_50dp"
            android:background="@color/theme_bg_color"
            app:centerTitle="@string/update_my_hi_message"
            app:centerType="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:leftType="2"
            app:rightType="0"
            app:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/limit_size_20dp"
            android:text="@string/current_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/liveTitleBar2"
            app:layout_constraintVertical_bias="0.02"
            tools:ignore="MissingConstraints" />
        
        <EditText
            android:id="@+id/msg_connect"
            android:layout_width="match_parent"
            android:layout_height="@dimen/limit_size_40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.01"
            android:background="@drawable/hy_et_bg"
            android:paddingLeft="@dimen/limit_size_5dp"
            android:text="@={data.msgLiveData}"
            android:layout_marginStart="@dimen/limit_size_50dp"
            android:layout_marginEnd="@dimen/limit_size_50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/limit_size_40dp"
            android:layout_marginStart="@dimen/limit_size_50dp"
            android:layout_marginEnd="@dimen/limit_size_50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/sure"
            android:gravity="center"
            app:layout_constraintVertical_bias="0.2"
            android:textColor="@color/white"
            android:background="@drawable/sure_tv_bg"
            android:textSize="@dimen/font_size_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/msg_connect"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>